re PR fortran/30683 ([4.2 only] internal compiler error: Segmentation fault)

2007-02-02  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/30683
	* resolve.c (resolve_generic_f): Check for non-NULL sym.
	* gfortran.dg/interface_10.f90: New test.

From-SVN: r121531